bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value char
while (! finished){char getIndication();
                   ^BDR:4: error: type mismatch;
 found   : String("R")
 required: Boolean
                  if ("R") {right();
                      ^BDR:6: error: type mismatch;
 found   : String("L")
 required: Boolean
                  if ("L") {left();
                      ^BDR:8: error: type mismatch;
 found   : String("I")
 required: Boolean
                  if ("I") {left();
                      ^BDR:11: error: type mismatch;
 found   : String("A")
 required: Boolean
                  if ("A") {forward()}
                      ^BDR:12: error: type mismatch;
 found   : String("B")
 required: Boolean
                  if ("B") {forward();
                      ^BDR:14: error: type mismatch;
 found   : String("C")
 required: Boolean
                  if ("C") {forward();
                      ^BDR:17: error: type mismatch;
 found   : String("Z")
 required: Boolean
                  if ("Z") {backward()}
                      ^BDR:18: error: type mismatch;
 found   : String("Y")
 required: Boolean
                  if ("Y") {backward();
                      ^BDR:20: error: type mismatch;
 found   : String("X")
 required: Boolean
                  if ("X") {backward();
                      ^